# personal-file-parser

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  test.py
src/: api.py  config.py
src/core/: dependencies.py  validator.py
src/routes/: documents.py  extraction.py
src/schemas/: exceptions.py  responses.py
src/services/: docs.py  extract.py
src/tools/: utils.py  word_extractor.py
