[project]
name = "personal-file-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "fastembed>=0.7.4",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "pydantic-settings>=2.13.0",
    "unstructured[docx,pptx]>=0.21.2",
    "uvicorn[standard]>=0.41.0",
]
